creato container con id

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body >
     <main>
+        <div id="team-container" class="container"></div>
         
     </main>
     <script src="script.js"></script>
