--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 </head>
 <body >
     <main>
-        <div id="team-container" class="container"></div>
-        
+        <div class="container">
+            <h2 >Our team</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in
+                varius ante. Sed quis luctus eros. Phasellus rutrum laoreet leo in
+                consequat.
+            </p>
+        </div>
+        <div id="team-container" class="container">
+
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
