--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body >
     <main>
         <div class="container">
-            <h2 >Our team</h2>
+            <h1 >Our team</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in
                 varius ante. Sed quis luctus eros. Phasellus rutrum laoreet leo in
                 consequat.
             </p>
-        </div>
-        <div id="team-container" class="container">
+            <div id="team-container" class="d-flex flex-wrap gap-5 justify-content-center">
 
+            </div>
         </div>
     </main>
     <script src="script.js"></script>
