aggiunto bottone Clear

--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
                     <label for="role">Role </label>
                     <input type="text" id="role" />
                     
-                    <label for="name">Image</label>
-                    <input type="text" id="image" />
-                    
                     <button type="button" id="addMemberBtn">Add</button>
+                    <button type="reset" id="reset">Clear</button>
                 </div>
             </div>
         </div>
